--- a/scss/components/hero-banner.scss
+++ b/scss/components/hero-banner.scss
@@ -29,6 +29,7 @@
 		display: flex;
 		margin: 0 auto;
 		padding: 0 16px;
+		max-width: 100%;
 
 		@media (min-width: 1200px) {
 			max-width: 1200px;
@@ -55,6 +56,7 @@
 		justify-content: flex-start;
 		z-index: 3;
 		text-align: center;
+		max-width: 100%;
 
 		@media (min-width: 992px) {
 			text-align: left;
