--- a/scss/ui/heading.scss
+++ b/scss/ui/heading.scss
@@ -59,14 +59,15 @@
   }
 
   &--hero {
-    font-size: 42px;
-    line-height: 1;
+    font-size: 28px;
+    line-height: 34px;
     color: white;
     text-transform: uppercase;
     font-weight: 700;
 
     @media (min-width: 768px) {
       font-size: 70px;
+      line-height: 1;
     }
   }
 
